@@ -1,6 +1,8 @@
 PHP 4                                                                      NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, Version 4.3.7
+- Fixed bug #28042 (greek letters in html to entitity mapping not correct).
+  (Derick)
 - Fixed bug #27995 (imagefilltoborder() stops the fill process prematurely).
   (Ilia)
 
